# zoo

./: LICENSE  README.md  pyproject.toml  tasks.py
doc/source/: conf.py  credits.rst  grammar.rst  index.rst
src/zoo/: __init__.py  idenifier_encode.py  mnemonics.json  parser.py  zoo.lark
